AP-199 adds IamUserApp.Document.PreferenceTheme in IamUserApp.j and OpenApi.json, adds COMMON_GLOBAL.Data.IamUserApp.user_theme, replaces app theme default in each app.js with commonAppSwitch(), sets default theme to common_theme1,refactors commonUserLoginApp() and commonUserPreferencesGlobalSetDefault() in common.js, removes appThemeUpdate() and updates theme to common_theme1, common_theme2 and common_theme3 in common_app_dialogues_user_menu_iam_user_app.js, updates types and removes theme background and adds common3 theme in app 2, corrects css for login in app 7
