# server/install/default/OpenApi.json
@@ -2014,6 +2014,9 @@
                                                 "required":true,
                                                 "type":"object",
                                                 "properties": {
+                                                    "preference_theme": {
+                                                        "type": "string"
+                                                    },
                                                     "preference_locale": {
                                                         "type": "string"
                                                     },
@@ -3207,6 +3210,9 @@
                                                 "required":true,
                                                 "type":"object",
                                                 "properties": {
+                                                    "preference_theme": {
+                                                        "type": "string"
+                                                    },
                                                     "preference_locale": {
                                                         "type": "string"
                                                     },
